2006-01-11  Per Bothner  <per@bothner.com>

	* GetModuleClass.java: Some cleaning up.

2006-01-07  Per Bothner  <per@bothner.com>

	* GetModuleClass.java: New class, extends Procedure0.
	(getModuleClassURI): New static main public entry point.
	* Makefile.am (java_sources): Add new file.

2006-01-04  Per Bothner  <per@bothner.com>

	* BaseUri.java (resolve): Remove method - using URI_utils instead.

2006-01-02  Per Bothner  <per@bothner.com>

	* URI_utils.java: Moved to gnu.text.
	* Makefile.am: Update accordingly.

2005-12-31  Per Bothner  <per@bothner.com>

	* URI_utils.java: New class, for URI-related helper methods.
	(toURI): Convert various values to URI - or String if URI is missing.
	(URLtoURI, toURIString, filenameToURIString, toURIString): Static
	help methods.
	* Makefile.am: Update accordingly.

	* DisplayFormat.java (writeObject): Use SRFI-10 notation when readably
	writing java.net.URI objects.  This is condionally compiled.

2005-12-13  Per Bothner  <per@bothner.com>

	* BaseUri.java: No longer extends Procedure0or1.
	(baseUri): Remove no-longer used static field.
	(appl0, apply1): Remove no-longer-needed methods.

2005-12-10  Per Bothner  <per@bothner.com>

	* BaseUri.java (uriSchemeLength): Moved to InPort.java.
	(hasScheme): Moved to InPort.java and renamed to uriSchemeSpecified.
	(resolve): Update accordingly.

2005-12-04  Per Bothner  <per@bothner.com>

	* GetNamedPart.java: New class.
	* Makefile.am: Update accodingly.

2005-11-14  thomas kirk  <tk@research.att.com>

	* Format.java (formatToString, format$V): Close OutPorts.
	* ObjectFormat.java (format): Close OutPort.

2005-07-20  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (outBase, outRadix): New ThreadLocation fields.
	(writeObject): If obj is rational, use outBase and outRadix to format
	number as specified for Common Lisp.	

2005-06-29  Per Bothner  <per@bothner.com>

	* NumberCompare.java (language): New field.
	(make): Factor method now takes a Language.