@@ -1,5 +1,7 @@
 2006-01-11  Per Bothner  <per@bothner.com>
 
+	* GetNamedPart.java: Some cleaning up.
+
 	* GetModuleClass.java: Some cleaning up.
 
 2006-01-07  Per Bothner  <per@bothner.com>
